tests/kyverno/compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-service
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: service
      image: ghcr.io/stefanprodan/podinfo:6.7.1
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 256Mi
