tests/kyverno/container-overrides-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: container-security-overrides
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: service
      image: ghcr.io/stefanprodan/podinfo:6.7.1
      securityContext:
        runAsNonRoot: false
        seccompProfile:
          type: Unconfined
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          add:
            - NET_ADMIN
          drop:
            - ALL
      resources:
        requests:
          cpu: 600m
          memory: 300Mi
        limits:
          cpu: 500m
          memory: 256Mi
